test/runnable/empty.sam
// ERROR_COUNT: 0

class Main {
  function main(): unit = {}
}
